# smarts-bio-jupyterlab

./: .gitignore  .npmrc  .yarnrc.yml  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml
schema/: plugin.json
scripts/: sync-version.js
smarts_bio_jupyterlab/: __init__.py  handlers.py
src/: capabilities.ts  icons.ts  index.ts  version.ts
src/api/: SmartsBioClient.ts
src/auth/: AuthProvider.ts  OAuthCallback.ts
src/chat/: App.tsx  types.ts
src/chat/components/: AtFileDropdown.tsx  ChatView.tsx  ContextPill.tsx  MessageBubble.tsx  SignedOutView.tsx  SlashCommandDropdown.tsx
src/icons/: fileTypeLabIcons.ts
src/notebook/: CellContextProvider.ts  CellInserter.ts  KernelContextBridge.ts
src/panels/: FilesPanel.tsx  ProcessesPanel.tsx
src/statusbar/: StatusBarWidget.ts
src/utils/: fileIcons.tsx
src/viewers/: ViewerWidget.ts  ViewerWidget.tsx  ViewerWidgetFactory.ts  ViewerWidgetFactory.tsx  alignmentViewer.ts  csvViewer.ts  genomeBrowserIo.ts  graphExplorerBridge.ts  igvViewer.ts  renderViewer.tsx  sequenceViewer.ts  structureViewer.ts  variantViewer.ts  viewerShell.ts
src/widgets/: BioSearchWidget.tsx  ChatWidget.tsx  ExplorerWidget.tsx  FilesWidget.tsx  GenomeBrowserWidget.tsx  GraphExplorerWidget.tsx  ProcessesWidget.tsx
src/workspace/: WorkspaceSelector.ts
style/: base.css  index.js
